[tool.poetry]
name = "build_graph"
version = "0.1.0"
description = ""
authors = ["Mark O'Brien <mark.obrien@brightjourneyai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.3"
langchain-experimental = "^0.0.60"
neo4j = "^5.21.0"
json-repair = "^0.23.1"
langchain-openai = "^0.1.8"
youtube-transcript-api = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_kg = "build_graph.app:build_kg"
